# DemoTool

./: CMakeLists.txt  README.md  build.sh  demotool.c  demotool.h
src/: common.h  demotool.c  demotool.h  main.c
template/: shader.glsl
